--- a/style.css
+++ b/style.css
@@ -8,5 +8,46 @@ body{
     height: 100vh;
     /*cor de fundo */
     background: #201b2c;
-    display: flex; /* faz com que as coisas fiquem lado a lado
+    display: flex; /* faz com que as coisas fiquem lado a lado */
+    justify-content: center;
+    align-items: center;
+}
+
+.left-login{
+    width: 50vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /*flex direction para colocar um elemento sobre o outro, mesmo usando display flex */
+    flex-direction: column;
+
+}
+
+.left-login > h1 {
+ color: #77ffc0;
+}
+
+.right-login{
+    width: 50vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.card-login{
+    width: 60%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 30px 35px;
+    background: #2f2841;
+    border-radius: 20px;
+
+    /* sombra no card. eixo y, eixo x, blur e cor*/
+    box-shadow: 0px 10px 40px #00000056;
+
 }
