--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=REM:wght@400;700&family=Roboto:wght@400;700&display=swap');
 body{
     margin: 0;
+    font-family: 'Roboto' , 'sans-serif' ;
 }
 
 .main-login{
@@ -59,6 +61,7 @@ body{
 }   
 
 .textfield {
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
